Game HUD rendering the population

--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -4,7 +4,13 @@
   <title>frontend</title>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0" />
-  <style>body {margin: 0}</style>
+   <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700" rel="stylesheet">
+  <style>
+    body {
+      margin: 0;
+      font-family: 'Lato', sans-serif;
+    }
+  </style>
 </head>
 <body>
   <div id="root"></div>
