--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -10,6 +10,13 @@
       margin: 0;
       font-family: 'Lato', sans-serif;
     }
+
+    h3 {
+      margin: 0;
+    }
+    p {
+      margin: 0;
+    }
   </style>
 </head>
 <body>
