Improve bottom HUD styles

--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -6,6 +6,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0" />
    <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700" rel="stylesheet">
   <style>
+    html {
+      font-size: 15px;
+    }
     body {
       margin: 0;
       font-family: 'Lato', sans-serif;
@@ -13,9 +16,33 @@
 
     h3 {
       margin: 0;
+      font-size: .725rem;
+      text-transform: uppercase;
+      padding-bottom: .5rem;
+      font-weight: 300;
+      letter-spacing: .1rem;
     }
+
     p {
+      font-size: .825rem;
       margin: 0;
+      text-transform: uppercase;
+      padding-bottom: .25rem;
+    }
+
+    button {
+      border: 0;
+      background: #83bce6;
+      color: #10052b;
+      cursor: pointer;
+    }
+
+    button:hover {
+      background: #7e00aa;
+    }
+
+    button:focus {
+      outline: none;
     }
   </style>
 </head>
