--- a/public/index.html
+++ b/public/index.html
@@ -45,8 +45,8 @@
       outline: none;
     }
   </style>
-</head>
+<link href="index-d21c350c37321fa23db4-0.css" rel="stylesheet"></head>
 <body>
   <div id="root"></div>
-<script type="text/javascript" src="index-7f75b576ba63d084aa52.js"></script></body>
+<script type="text/javascript" src="index-00d058445a44eb533e8e.js"></script></body>
 </html>
