add onboard button to planets and control minimum population on the ship

--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -39,6 +39,15 @@
       background: #83bce6;
       color: #10052b;
       cursor: pointer;
+      margin-right: 5px;
+    }
+
+    button:disabled {
+      background: #666;
+    }
+
+    button:disabled:hover {
+      background: #666;
     }
 
     button:hover {
