--- a/public/index.html
+++ b/public/index.html
@@ -1,8 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>frontend</title>
+  <title>Day One</title>
   <meta charset="utf-8" />
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-status-bar-style" content="black">
+  <meta name="HandheldFriendly" content="true" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0" />
    <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700" rel="stylesheet">
   <style>
@@ -35,6 +39,15 @@
       background: #83bce6;
       color: #10052b;
       cursor: pointer;
+      margin-right: 5px;
+    }
+
+    button:disabled {
+      background: #666;
+    }
+
+    button:disabled:hover {
+      background: #666;
     }
 
     button:hover {
@@ -45,8 +58,8 @@
       outline: none;
     }
   </style>
-<link href="index-8a524c55b33d6d42ee84-0.css" rel="stylesheet"></head>
+<link href="index-7f355c329c791b126aad-0.css" rel="stylesheet"></head>
 <body>
   <div id="root"></div>
-<script type="text/javascript" src="index-86ea26f47412e8670672.js"></script></body>
+<script type="text/javascript" src="index-097738172b1df956412a.js"></script></body>
 </html>
