--- a/src/slides.html
+++ b/src/slides.html
@@ -9,6 +9,7 @@
   <meta name="HandheldFriendly" content="true" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0" />
   <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Lora:400,400i" rel="stylesheet">
 </head>
 <body>
   <div class="reveal" id="root"></div>
