fix animation issue

--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
       outline: none;
     }
   </style>
-<link href="index-01fa598e6a2e684e9425-0.css" rel="stylesheet"></head>
+</head>
 <body>
   <div id="root"></div>
-<script type="text/javascript" src="index-270c9178728babd57142.js"></script></body>
+<script type="text/javascript" src="index-bc5bc9e84a24c6deca0f.js"></script></body>
 </html>
